Fix layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,6 @@ body, html {
     margin: 0;
   }
 
-html {
-    text-align: center;
-}
-
-body {
-    align-items: center;
-}
-
 .bg {
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../images/bg.jpeg');
     background-position: center;
@@ -19,15 +11,23 @@ body {
     height: 100%; 
 }
 
+.container-fluid {
+    display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
 .clock {
     width: 20rem;
     height: 20rem;
     border: 1rem solid #fff;
-    border-radius: 50rem;
+    border-radius: 50%;
     padding: 2rem;
-    margin: auto;
     position: relative;
     top: 20%;
+    box-shadow: 0 0 98px 6px rgba(0, 0, 0, 0.8);
 }
 
 .clock-face {
